--- a/ЛР4.md
+++ b/ЛР4.md
@@ -91,6 +91,138 @@
 - pkill ім’я_процесу – завершує процеси за ім’ям або частковим збігом.
 - htop – у ньому можна завершити процеси вручну за допомогою клавіш (наприклад, F9 для завершення).
 
+
+## Основні параметри команди top
+
+- %CPU – відображає частку часу процесора, зайнятого процесом.
+- %MEM – показує відсоток використання пам’яті процесом.
+- PR – пріоритет процесу.
+- NI – "nice" значення, що впливає на пріоритет процесу.
+- VIRT – загальний обсяг віртуальної пам’яті, що використовується процесом.
+- RES – обсяг фізичної пам’яті, що використовується процесом.
+
+# Відповіді на питання
+
+## 2.1. Які команди для моніторингу стану процесів ви знаєте? Як переглянути їх можливі параметри?
+
+Для моніторингу процесів у Linux використовують такі команди:
+
+- ps – виводить список процесів, які виконуються у системі.
+- top – відображає інформацію про процеси в реальному часі.
+- htop – покращена версія top із кольоровим інтерфейсом (не завжди встановлена за замовчуванням).
+
+Щоб переглянути можливі параметри команд, можна скористатися:
+
+- man ps, man top – відкриває документацію до команди.
+- ps --help, top --help – короткий довідник по параметрах.
+
+## 2.2. Чи може команда ps у реальному часі відслідковувати стан процесів?
+
+Ні, команда ps не відслідковує процеси в реальному часі. Вона відображає інформацію лише на момент виконання команди.
+Для моніторингу в реальному часі потрібно використовувати top або htop.
+
+## 2.3. За якими параметрами можливе сортування процесів у команді top? Як переключатись між ними?
+
+Команда top дозволяє сортувати процеси за різними параметрами, зокрема:
+
+- %CPU – використання процесора.
+- %MEM – використання оперативної пам’яті.
+- PID – ідентифікатор процесу.
+- PR – пріоритет процесу.
+- NI – nice-значення (впливає на пріоритет).
+- VIRT – використання віртуальної пам’яті.
+- RES – використання фізичної пам’яті.
+
+Переключатися між параметрами сортування можна за допомогою клавіші f, а потім вибрати потрібне поле. Також можна натискати:
+
+- P – сортувати за CPU.
+- M – сортувати за пам’яттю.
+- N – сортувати за PID.
+
+## 2.4. Які команди для завершення роботи процесів ви знаєте?
+
+- kill PID – завершує процес за його PID (ідентифікатором).
+- kill -9 PID – примусово завершує процес (-9 – сигнал KILL).
+- killall ім’я_процесу – завершує всі процеси з вказаним іменем.
+- pkill ім’я_процесу – завершує процеси за ім’ям або частковим збігом.
+- htop – у ньому можна завершити процеси вручну за допомогою клавіш (наприклад, F9 для завершення).
+
+
+# Основні позиції ходу роботи
+## 1. Як вивести вміст директорії /proc? Де вона знаходиться та для чого призначена? Охарактеризуйте інформацію про її вміст?
+- Директорія /proc — це віртуальна файловa система, яка містить інформацію про процеси та стан системи в режимі реального часу.
+- Вона знаходиться в кореневій файловій системі за шляхом: /proc
+- Щоб вивести її вміст, виконайте команду: ls /proc
+### Основний вміст /proc:
+
+Числові каталоги  — містять інформацію про процеси з відповідним PID.
+Файли системної інформації:
+- /proc/cpuinfo – інформація про процесор.
+- /proc/meminfo – стан пам'яті.
+- /proc/version – версія ядра.
+- /proc/mounts – змонтовані файлові системи.
+## 2. Як вивести інформацію про поточні сеанси користувачів. Якою командою це можна зробити?
+Команди:
+- who         # Список користувачів, які зараз увійшли
+- w           # Детальна інформація про користувачів і їхні процеси
+- whoami      # Ім'я поточного користувача
+## 3. Які дії можна зробити в терміналі за допомогою комбінацій Ctrl + C, Ctrl + D та Ctrl + Z?
+- Ctrl + C – примусове завершення поточного процесу.
+- Ctrl + D – вихід з поточного сеансу терміналу (або закінчення вводу в інтерактивних програмах).
+- Ctrl + Z – призупинення поточного процесу (відправка в STOP стан).
+  ## 4. Чим відрізняється фоновий процес від звичайного. Де вони використовуються?
+- Звичайний процес виконується в передньому плані (foreground), блокуючи введення команд у терміналі.
+- Фоновий процес (background) працює у фоновому режимі, не блокуючи термінал.
+- Використовуються для тривалих операцій: сервери, завантаження, автоматизація.
+  ## 5. Опишіть наступні команди та поясніть що вони виконують – команда jobs, bg, fg.
+- jobs – показує список фонових процесів.
+- bg [process number] – відновлює призупинений процес у фоновому режимі.
+- fg [process number] – повертає фоновий процес у передній план.
+## 6. Якою командою можна переглянути інформацію про запущені в системи фонові процеси та задачі?
+- jobs          # Відображає фонові процеси поточного терміналу
+- ps aux | grep <назва_процесу>  # Шукає конкретний процес
+- htop          # Інтерактивний перегляд процесів
+## 7. Як призупинити фоновий процес, як його потім відновити та при необхідності перезапусти?
+- Призупинення процесу: Ctrl + Z
+- Відновлення у фоні: bg %1
+- Відновлення у передньому плані: fg %1
+- Перезапуск завершеного процесу: kill -9 <PID> (Примусове завершення), command &  (Перезапуск у фоні)
+ ## 3.1 
+ ### Запуск команди top
+1. gnome-s+ (PID: 1870, Користувач: vboxuser)
+    Використовує 29.8% CPU та 8.0% пам'яті.
+2. gnome-t+ (PID: 2501, Користувач: vboxuser)
+    Використовує 3.6% CPU та 1.2% пам'яті.
+3. firefox (PID: 2643, Користувач: vboxuser)
+    Використовує 3.6% CPU та 8.8% пам'яті.
+4. WebExte+ (PID: 2884, Користувач: vboxuser)
+    Використовує 2.6% CPU та 2.6% пам'яті.
+5. Privile+ (PID: 2926, Користувач: vboxuser)
+    Використовує 3.4% CPU та 3.4% пам'яті.
+   
+![](https://github.com/Huaweitututu/Operating-systems-BIKS-23/blob/main/com.%20top.png)
+
+## 3.2 Призупинення top
+Комбінаація клаавіш Ctrl + Z.
+## 3.3 Виведення інформації про процеси (ps)
+ps aux - вона покаже всі процеси у системі.
+
+![](https://github.com/Huaweitututu/Operating-systems-BIKS-23/blob/main/ps%20aux.png)
+
+## 3.4 П'ять прикладів використання ps:
+- ps -e          # Всі процеси в системі  
+- ps -u $USER    # Процеси поточного користувача  
+- ps -ef         # Детальний список процесів  
+- ps -e --forest # Дерево процесів  
+- ps -o pid,ppid,cmd,%mem,%cpu --sort=-%cpu  # Найбільш ресурсозатратні процеси
+## 3.5 
+1. Перегляд фонових процесів
+2. Відновлення призупиненого процесу
+3. Завершення фонового процесу
+   
+![](https://github.com/Huaweitututu/Operating-systems-BIKS-23/blob/main/jobs.png)
+
+
 # Контрольні запитання
 
 ## 1. The `/proc` Directory
