--- a/ЛР4.md
+++ b/ЛР4.md
@@ -6,7 +6,7 @@
 Ознайомлення з основними командами для моніторингу процесів у Linux, вивчення їхніх параметрів та можливостей.
 
 
-# Завдання для попередньої підготовки 
+# Завдання для попередньої підготовки (Станіслав Рубель)
 
 ## Основні терміни та їх переклад
 
@@ -148,7 +148,7 @@
 - htop – у ньому можна завершити процеси вручну за допомогою клавіш (наприклад, F9 для завершення).
 
 
-# Основні позиції ходу роботи
+# Основні позиції ходу роботи (Назар Видиборець)
 ## 1. Як вивести вміст директорії /proc? Де вона знаходиться та для чого призначена? Охарактеризуйте інформацію про її вміст?
 - Директорія /proc — це віртуальна файловa система, яка містить інформацію про процеси та стан системи в режимі реального часу.
 - Вона знаходиться в кореневій файловій системі за шляхом: /proc
@@ -223,7 +223,7 @@ ps aux - вона покаже всі процеси у системі.
 ![](https://github.com/Huaweitututu/Operating-systems-BIKS-23/blob/main/jobs.png)
 
 
-# Контрольні запитання
+# Контрольні запитання (Святослав Чернуцький)
 
 ## 1. The `/proc` Directory
 The `/proc` directory is similar to the `/dev` directory because it does not contain regular files, but special files that provide information about running processes and the state of the kernel.
