--- a/ЛР5.md
+++ b/ЛР5.md
@@ -5,4 +5,27 @@
  Знайомство з базовими командами навігації по файловій системі.
  Знайомство з базовими командами для керування файлами та каталогами.
 
-## 
+## Відповіді на контрольні запитання
+1. Як можна переглянути шлях до домашньої директорії користувача за допомогою команди `echo`? Наведіть обидва приклади у терміналі.  
+   - **Answer**: You can use `echo $HOME` to display the home directory path using the environment variable, or `echo ~` to use the tilde symbol representing the home directory.
+
+2. Чи можна переглянути вміст кореневого каталогу, перебуваючи у домашньому каталозі користувача без переходу у кореневий каталог? Продемонструйте це в командному рядку.  
+   - **Answer**: Yes, you can use `ls /` to list the contents of the root directory without leaving the user's home directory.
+
+3. Яким чином у терміналі можна додати інформацію в порожній файл?  
+   - **Answer**: Use the `echo` command with the `>>` operator, for example: `echo "Your text" >> filename.txt`.
+
+4. Як скопіювати та видалити існуючий каталог? Чи буде відмінність у командах, якщо каталог не порожній?  
+   - **Answer**:  
+     - Copy: `cp -r sourcedir destinationdir` (the `-r` flag is used for recursive copying).  
+     - Delete: `rm -r dirname` (the `-r` flag ensures non-empty directories are removed).  
+     The commands are the same, but the `-r` flag is necessary for non-empty directories.
+
+5. У якому з наведених нижче прикладів відбувається переміщення файлу? Його перейменування? Одночасно обидві дії?  
+   - `mv /work/tech/comp.png /Desktop`  
+   - `mv /work/tech/comp.png /work/tech/my_car.png`  
+   - `mv /work/tech/comp.png /Desktop/computer.png`  
+   - **Answer**:  
+     - The first command **moves** the file to the Desktop directory.  
+     - The second command **renames** the file within the same directory.  
+     - The third command **moves and renames** the file simultaneously.
