--- a/ЛР5.md
+++ b/ЛР5.md
@@ -4,6 +4,104 @@
  Отримання практичних навиків роботи з командною оболонкою Bash.
  Знайомство з базовими командами навігації по файловій системі.
  Знайомство з базовими командами для керування файлами та каталогами.
+ 
+# Словник термінів
+1. File – A unit of data storage (e.g., text, graphics, programs) in Linux.
+2. Directory – A file type that stores other files; called a "folder" in Windows/Mac.
+3. Filesystem – The hierarchical structure of files and directories in Linux.
+4. Root Directory (/) – The top level of the Linux filesystem.
+5. Command Line – Interface for managing files via text commands.
+6. cd Command – Changes the current directory (e.g., cd /home).
+7. FHS – Filesystem Hierarchy Standard, defining common directory purposes.
+8. Home Directory – Unique directory assigned to a user.
+9. Globbing – Using wildcards (*, ?, []) to match file patterns.
+10. cp Command – Copies files or directories (e.g., cp source dest).
+11. mv Command – Moves or renames files (e.g., mv source dest).
+12. Source – The original file/directory in an operation.
+13. Destination – The target location/name in an operation.
+14. Recursive (-r) – Option to include directories in cp or mv.
+15. Verbose (-v) – Option to show command output.
+
+Key Directories:
+
+    /bin – Stores basic user utilities.
+    /etc – Holds system configuration files.
+    /home – Contains user home directories.
+    /tmp – Stores temporary files.
+    /usr – Holds user utilities and data.
+    
+# Відповіді на п.2.1-2.3 з завдань для попередньої підготовки
+
+## Comparison of Windows-like and Linux-like Filesystem Structures
+
+Below is a comparison of filesystem structures between Windows-like and Linux-like systems, based on the provided text:
+
+| **Aspect**             | **Windows-like System**                          | **Linux-like System**                          |
+|-------------------------|--------------------------------------------------|------------------------------------------------|
+| **Top-Level**           | "My Computer" shows physical devices (e.g., C:, D:). | Root directory denoted by "/".                |
+| **Device Representation** | Drive letters (e.g., C: for hard drive, D: for USB). | Devices mounted as directories under "/".    |
+| **Hierarchy**           | Folders under drives; no strict naming standard. | Unified hierarchy under "/", often follows FHS. |
+| **Common Locations**    | User files in "Documents," programs in "Program Files." | User files in "/home," binaries in "/bin" or "/usr/bin." |
+| **GUI vs CLI**          | Relies on GUI (File Explorer); CLI optional.     | GUI available, CLI (terminal) widely used.    |
+
+- **Windows**: Multi-root structure with drive letters; less standardized.
+- **Linux**: Single-root ("/") structure, standardized by FHS.
+
+---
+
+# Filesystem Hierarchy Standard (FHS)
+
+The **Filesystem Hierarchy Standard (FHS)** defines the structure and purpose of directories in Unix-like systems, including Linux.
+
+- **Purpose**: Ensures consistency across distributions for easier file location.
+- **Usage**: Standardizes directory roles (e.g., "/bin" for binaries, "/etc" for configs). Many Linux distributions comply with FHS.
+- **Example**: "/boot" stores boot files, "/tmp" holds temporary files, per FHS guidelines.
+
+FHS improves portability and predictability in Linux filesystems.
+
+---
+
+# Main Linux Commands for File and Directory Management
+
+Key commands for managing files and directories in Linux:
+
+1. **Creation**:
+   - **Files**: Use a text editor (e.g., `nano`, `vim`) or:
+     - `touch filename` – Creates an empty file.
+   - **Directories**:
+     - `mkdir directory_name` – Creates a new directory.
+
+2. **Moving**:
+   - **mv Command**: Moves or renames files/directories.
+     - Syntax: `mv [source] [destination]`
+     - Examples:
+       - `mv file1 /home/user/` – Moves "file1" to "/home/user/".
+       - `mv file1 file2` – Renames "file1" to "file2".
+     - Options: `-i` (interactive), `-n` (no overwrite), `-v` (verbose).
+
+3. **Copying**:
+   - **cp Command**: Copies files or directories.
+     - Syntax: `cp [source] [destination]`
+     - Examples:
+       - `cp file1 file2` – Copies "file1" to "file2".
+       - `cp -r dir1 dir2` – Copies "dir1" to "dir2" recursively.
+     - Options: `-v` (verbose), `-r` (recursive).
+
+4. **Deletion**:
+   - **rm Command**: Removes files or directories.
+     - Syntax: `rm [file]`
+     - Examples:
+       - `rm file1` – Deletes "file1".
+       - `rm -r dir1` – Deletes "dir1" and its contents.
+     - Options: `-f` (force), `-r` (recursive).
+
+---
+
+## Summary
+
+- **Windows vs Linux**: Windows uses drive letters and a flexible structure; Linux uses a single root with FHS standardization.
+- **FHS**: Provides a consistent directory framework for Linux systems.
+- **Commands**: Core operations include `touch`/`mkdir` (create), `mv` (move/rename), `cp` (copy), and `rm` (delete).
 
 ## Відповіді на контрольні запитання
 1. Як можна переглянути шлях до домашньої директорії користувача за допомогою команди `echo`? Наведіть обидва приклади у терміналі.  
