--- a/ЛР5.md
+++ b/ЛР5.md
@@ -103,6 +103,67 @@ Key commands for managing files and directories in Linux:
 - **FHS**: Provides a consistent directory framework for Linux systems.
 - **Commands**: Core operations include `touch`/`mkdir` (create), `mv` (move/rename), `cp` (copy), and `rm` (delete).
 
+# 2. Таблиця для опису команд NDG Linux Essentials - Lab 7: Navigating the Filesystem та Lab 8: Managing Files and Directories.
+
+## Explanation of Linux Commands
+
+Below is a table explaining the provided Linux commands related to filesystem navigation and management.
+
+| **Command**                  | **Explanation**                                                                                   |
+|------------------------------|---------------------------------------------------------------------------------------------------|
+| **Navigation and Listing**   |                                                                                                   |
+| `ls`                         | Lists directory contents (Note: `ls` is not directly in the text but implied; use `dir` in some contexts). |
+| `pwd`                        | Prints the current working directory (e.g., `/home/user`).                                       |
+| `cd`                         | Changes the current directory (e.g., `cd /path` moves to specified path).                        |
+| `cd Documents`               | Moves to the "Documents" directory in the current location.                                      |
+| `cd Junk`                    | Moves to the "Junk" directory in the current location.                                           |
+| `ls -a`                      | Lists all files, including hidden ones (starting with `.`).                                      |
+| `ls -l`                      | Lists files in long format (details like permissions, owner, size).                              |
+| `ls -d`                      | Lists directories themselves, not their contents (e.g., `ls -d /etc`).                          |
+| `ls -ld`                     | Combines `-l` and `-d`: long format for directories only.                                        |
+| `ls -R`                      | Lists recursively, showing contents of subdirectories.                                           |
+| `ls -S`                      | Sorts files by size, largest first.                                                             |
+| `ls -lrt`                    | Long format (`-l`), reverse order (`-r`), sorted by modification time (`-t`).                    |
+| `ls -t`                      | Sorts files by modification time, newest first.                                                 |
+| `ls -lrS`                    | Long format (`-l`), reverse order (`-r`), sorted by size (`-S`).                                |
+| `ls -tl`                     | Sorts by time (`-t`), in long format (`-l`).                                                    |
+| `ls -lSh`                    | Long format (`-l`), sorted by size (`-S`), with human-readable sizes (`-h`).                    |
+| `ls -lS`                     | Long format (`-l`), sorted by size (`-S`).                                                      |
+| **Globbing with `echo`**     |                                                                                                   |
+| `echo /etc/t*`               | Displays files in `/etc/` starting with "t" (e.g., `timezone`).                                 |
+| `echo /etc/*.d`              | Displays files in `/etc/` ending with ".d" (e.g., `apparmor.d`).                                |
+| `echo /etc/r*.conf`          | Displays files in `/etc/` starting with "r" and ending with ".conf" (e.g., `resolv.conf`).      |
+| `echo /etc/t???????`         | Displays files in `/etc/` starting with "t" and exactly 7 characters long (e.g., `termcap`).    |
+| `echo /etc/*????????????????????` | Displays files in `/etc/` with 16+ characters (e.g., long filenames).                     |
+| `echo /etc/*.???`            | Displays files in `/etc/` with a 3-character extension (e.g., `foo.bar`).                       |
+| `echo /etc/[gu]*`            | Displays files in `/etc/` starting with "g" or "u" (e.g., `group`, `udev`).                     |
+| `echo /etc/[a-d]*`           | Displays files in `/etc/` starting with "a" to "d" (e.g., `apt`, `bash.bashrc`).                |
+| `echo /etc/*[9-0]*`          | Likely a typo; intended `[0-9]` matches files with digits (e.g., `rc0.d`). Reverse range invalid.|
+| `echo /etc/*[0-9]*`          | Displays files in `/etc/` containing digits (e.g., `rc3.d`).                                    |
+| `echo /etc/[!a-t]*`          | Displays files in `/etc/` not starting with "a" to "t" (e.g., `udev`, `xattr.conf`).            |
+| **File Operations**          |                                                                                                   |
+| `ls /etc/adduser.conf`       | Lists specific file `/etc/adduser.conf` (checks existence).                                     |
+| `ls /etc/alternatives`       | Lists contents of `/etc/alternatives` directory.                                                |
+| `ls /etc/x*`                 | Lists files in `/etc/` starting with "x" (e.g., `xattr.conf`).                                  |
+| `cp /etc/hosts ~`            | Copies `/etc/hosts` to the user's home directory (`~`).                                         |
+| `cp -v /etc/hosts ~`         | Copies `/etc/hosts` to `~` with verbose output (`-v`) showing the action.                       |
+| `cp /etc/hosts ~/hosts.copy` | Copies `/etc/hosts` to `~/hosts.copy` (new filename).                                           |
+| `cp /etc/hostname example.txt` | Copies `/etc/hostname` to `example.txt` in the current directory.                             |
+| `cat example.txt`            | Displays the contents of `example.txt`.                                                         |
+| `cp /etc/timezone example.txt` | Overwrites `example.txt` with contents of `/etc/timezone`.                                    |
+| `ls -l example.txt`          | Lists `example.txt` in long format (shows details).                                             |
+| `cp -i /etc/skel/.* ~`       | Copies hidden files from `/etc/skel/` to `~`, prompting before overwrite (`-i`).                |
+| `cp -n /etc/skel/.* ~`       | Copies hidden files from `/etc/skel/` to `~`, no overwrite if files exist (`-n`).               |
+| `cp -r source_directory destination_directory` | Copies `source_directory` and its contents to `destination_directory` recursively (`-r`). |
+| `mv source destination`      | Moves or renames `source` to `destination`.                                                     |
+| `ls -l sample`               | Lists `sample` in long format (checks details).                                                 |
+| `rm sample`                  | Deletes the file `sample`.                                                              |
+| `touch sample`               | Creates an empty file named `sample` (or updates its timestamp if it exists).                   |
+| `rm Videos`                  | Attempts to delete `Videos` (fails if it’s a directory; use `rm -r Videos` for directories).    |
+
+
+
+
 ## Відповіді на контрольні запитання
 1. Як можна переглянути шлях до домашньої директорії користувача за допомогою команди `echo`? Наведіть обидва приклади у терміналі.  
    -  You can use `echo $HOME` to display the home directory path using the environment variable, or `echo ~` to use the tilde symbol representing the home directory.
@@ -121,8 +182,7 @@ Key commands for managing files and directories in Linux:
 5. У якому з наведених нижче прикладів відбувається переміщення файлу? Його перейменування? Одночасно обидві дії?  
    - `mv /work/tech/comp.png /Desktop`  
    - `mv /work/tech/comp.png /work/tech/my_car.png`  
-   - `mv /work/tech/comp.png /Desktop/computer.png`
-   -   
-     - The first command **moves** the file to the Desktop directory.  
-     - The second command **renames** the file within the same directory.  
-     - The third command **moves and renames** the file simultaneously.
+   - `mv /work/tech/comp.png /Desktop/computer.png`  
+    - The first command **moves** the file to the Desktop directory.  
+    - The second command **renames** the file within the same directory.  
+    - The third command **moves and renames** the file simultaneously.
