--- a/ЛР5.md
+++ b/ЛР5.md
@@ -31,7 +31,7 @@ Key Directories:
     /usr – Holds user utilities and data.
 
 # Хід роботи
-[![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348007131768557659/image.png?ex=67cde4f8&is=67cc9378&hm=953f6d4342abf92e8ddcce0fba4ff2b2648c01964054bd1584afe4ce92c70679&)
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348007131768557659/image.png?ex=67cde4f8&is=67cc9378&hm=953f6d4342abf92e8ddcce0fba4ff2b2648c01964054bd1584afe4ce92c70679&)
 
 [![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009681406394479/image.png?ex=67cde758&is=67cc95d8&hm=1f0f3c22503ece8b5496afb2c0893bf4be95c86fa7a3a94da1851d3747cad84b&)
 
