--- a/ЛР5.md
+++ b/ЛР5.md
@@ -1,4 +1,4 @@
-![image](https://github.com/user-attachments/assets/82315ed1-1605-4e75-9c46-1600d77bd061)## Тема: “Знайомство з командами навігації по файловій системі та керування файлами та каталогами”
+## Тема: “Знайомство з командами навігації по файловій системі та керування файлами та каталогами”
 
 ## Мета роботи: 
  Отримання практичних навиків роботи з командною оболонкою Bash.
@@ -33,23 +33,23 @@ Key Directories:
 # Хід роботи
 ![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348007131768557659/image.png?ex=67cde4f8&is=67cc9378&hm=953f6d4342abf92e8ddcce0fba4ff2b2648c01964054bd1584afe4ce92c70679&)
 
-[![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009681406394479/image.png?ex=67cde758&is=67cc95d8&hm=1f0f3c22503ece8b5496afb2c0893bf4be95c86fa7a3a94da1851d3747cad84b&)
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009681406394479/image.png?ex=67cde758&is=67cc95d8&hm=1f0f3c22503ece8b5496afb2c0893bf4be95c86fa7a3a94da1851d3747cad84b&)
 
-[![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009724435501149/image.png?ex=67cde763&is=67cc95e3&hm=ca3b93be1028a2854ee5e818fec1415ec7fcae909784ca64f37e8be372366b91&)
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009724435501149/image.png?ex=67cde763&is=67cc95e3&hm=ca3b93be1028a2854ee5e818fec1415ec7fcae909784ca64f37e8be372366b91&)
 
-[![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009829607804969/image.png?ex=67cde77c&is=67cc95fc&hm=524cc94830c92a3799af867fe57e53ce4b515abf17249d4a46b01ec76da4631e&)
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009829607804969/image.png?ex=67cde77c&is=67cc95fc&hm=524cc94830c92a3799af867fe57e53ce4b515abf17249d4a46b01ec76da4631e&)
 
-[![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009879746646176/image.png?ex=67cde788&is=67cc9608&hm=843fbf0de380781b02a36491e58704105df0691cd35f7c3eb3d061ba3fdf165f&)
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009879746646176/image.png?ex=67cde788&is=67cc9608&hm=843fbf0de380781b02a36491e58704105df0691cd35f7c3eb3d061ba3fdf165f&)
 
-[![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009934452953180/image.png?ex=67cde795&is=67cc9615&hm=edf857f62e717fe3afa5cc50bbd75eb824c1f5e40fe82776f2f577720bbe0e23&)
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009934452953180/image.png?ex=67cde795&is=67cc9615&hm=edf857f62e717fe3afa5cc50bbd75eb824c1f5e40fe82776f2f577720bbe0e23&)
 
-[![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010135502454887/image.png?ex=67cde7c5&is=67cc9645&hm=c9a2618200417eca014e24668fb7b69120b6b4f8c5ed0632b21592398cc463f0&)
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010135502454887/image.png?ex=67cde7c5&is=67cc9645&hm=c9a2618200417eca014e24668fb7b69120b6b4f8c5ed0632b21592398cc463f0&)
 
-[![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010211704705045/image.png?ex=67cde7d7&is=67cc9657&hm=287ea05336e0b5da1c6adeafad2de8b42764042344686a7b03cfad0b5959a4ae&)
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010211704705045/image.png?ex=67cde7d7&is=67cc9657&hm=287ea05336e0b5da1c6adeafad2de8b42764042344686a7b03cfad0b5959a4ae&)
 
-[![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010656900583505/image.png?ex=67cde841&is=67cc96c1&hm=7c558e8a9f98691d251850472075dceb559e35c5dfa8c6e6f5d72d028280ab88&)
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010656900583505/image.png?ex=67cde841&is=67cc96c1&hm=7c558e8a9f98691d251850472075dceb559e35c5dfa8c6e6f5d72d028280ab88&)
 
-[![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010947054141540/image.png?ex=67cde886&is=67cc9706&hm=4dd9ee5574ef6db3537860da7bcf1e9e86a550b49b67326554e48f4a314ede88&)
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010947054141540/image.png?ex=67cde886&is=67cc9706&hm=4dd9ee5574ef6db3537860da7bcf1e9e86a550b49b67326554e48f4a314ede88&)
 # Відповіді на п.2.1-2.3 з завдань для попередньої підготовки
 
 
