--- a/ЛР5.md
+++ b/ЛР5.md
@@ -30,24 +30,6 @@ Key Directories:
     /tmp – Stores temporary files.
     /usr – Holds user utilities and data.
 
-# Хід роботи
-![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009681406394479/image.png?ex=67cde758&is=67cc95d8&hm=1f0f3c22503ece8b5496afb2c0893bf4be95c86fa7a3a94da1851d3747cad84b&)
-
-![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009724435501149/image.png?ex=67cde763&is=67cc95e3&hm=ca3b93be1028a2854ee5e818fec1415ec7fcae909784ca64f37e8be372366b91&)
-
-![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009829607804969/image.png?ex=67cde77c&is=67cc95fc&hm=524cc94830c92a3799af867fe57e53ce4b515abf17249d4a46b01ec76da4631e&)
-
-![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009879746646176/image.png?ex=67cde788&is=67cc9608&hm=843fbf0de380781b02a36491e58704105df0691cd35f7c3eb3d061ba3fdf165f&)
-
-![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009934452953180/image.png?ex=67cde795&is=67cc9615&hm=edf857f62e717fe3afa5cc50bbd75eb824c1f5e40fe82776f2f577720bbe0e23&)
-
-![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010135502454887/image.png?ex=67cde7c5&is=67cc9645&hm=c9a2618200417eca014e24668fb7b69120b6b4f8c5ed0632b21592398cc463f0&)
-
-![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010211704705045/image.png?ex=67cde7d7&is=67cc9657&hm=287ea05336e0b5da1c6adeafad2de8b42764042344686a7b03cfad0b5959a4ae&)
-
-![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010656900583505/image.png?ex=67cde841&is=67cc96c1&hm=7c558e8a9f98691d251850472075dceb559e35c5dfa8c6e6f5d72d028280ab88&)
-
-![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010947054141540/image.png?ex=67cde886&is=67cc9706&hm=4dd9ee5574ef6db3537860da7bcf1e9e86a550b49b67326554e48f4a314ede88&)
 # Відповіді на п.2.1-2.3 з завдань для попередньої підготовки
 
 
@@ -122,9 +104,11 @@ Key commands for managing files and directories in Linux:
 - **FHS**: Provides a consistent directory framework for Linux systems.
 - **Commands**: Core operations include `touch`/`mkdir` (create), `mv` (move/rename), `cp` (copy), and `rm` (delete).
 
-# 2. Таблиця для опису команд NDG Linux Essentials - Lab 7: Navigating the Filesystem та Lab 8: Managing Files and Directories.
 
-## Explanation of Linux Commands
+# Хід роботи
+## 2. Таблиця для опису команд NDG Linux Essentials - Lab 7: Navigating the Filesystem та Lab 8: Managing Files and Directories.
+
+### Explanation of Linux Commands
 
 Below is a table explaining the provided Linux commands related to filesystem navigation and management.
 
@@ -179,9 +163,43 @@ Below is a table explaining the provided Linux commands related to filesystem na
 | `rm sample`                  | Deletes the file `sample`.                                                              |
 | `touch sample`               | Creates an empty file named `sample` (or updates its timestamp if it exists).                   |
 | `rm Videos`                  | Attempts to delete `Videos` (fails if it’s a directory; use `rm -r Videos` for directories).    |
+## 3.
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009681406394479/image.png?ex=67cde758&is=67cc95d8&hm=1f0f3c22503ece8b5496afb2c0893bf4be95c86fa7a3a94da1851d3747cad84b&)
 
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009724435501149/image.png?ex=67cde763&is=67cc95e3&hm=ca3b93be1028a2854ee5e818fec1415ec7fcae909784ca64f37e8be372366b91&)
 
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009829607804969/image.png?ex=67cde77c&is=67cc95fc&hm=524cc94830c92a3799af867fe57e53ce4b515abf17249d4a46b01ec76da4631e&)
 
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009879746646176/image.png?ex=67cde788&is=67cc9608&hm=843fbf0de380781b02a36491e58704105df0691cd35f7c3eb3d061ba3fdf165f&)
+
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348009934452953180/image.png?ex=67cde795&is=67cc9615&hm=edf857f62e717fe3afa5cc50bbd75eb824c1f5e40fe82776f2f577720bbe0e23&)
+
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010135502454887/image.png?ex=67cde7c5&is=67cc9645&hm=c9a2618200417eca014e24668fb7b69120b6b4f8c5ed0632b21592398cc463f0&)
+
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010211704705045/image.png?ex=67cde7d7&is=67cc9657&hm=287ea05336e0b5da1c6adeafad2de8b42764042344686a7b03cfad0b5959a4ae&)
+
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010656900583505/image.png?ex=67cde841&is=67cc96c1&hm=7c558e8a9f98691d251850472075dceb559e35c5dfa8c6e6f5d72d028280ab88&)
+
+![NetAcad](https://cdn.discordapp.com/attachments/1308168435263606894/1348010947054141540/image.png?ex=67cde886&is=67cc9706&hm=4dd9ee5574ef6db3537860da7bcf1e9e86a550b49b67326554e48f4a314ede88&)
+
+## 4. Опис команд для переміщення по системі каталогів
+
+### Linux Directory Navigation Commands
+
+| **Command**   | **Where It Takes You**                  |
+|---------------|----------------------------------------|
+| `cd /`        | Root directory (`/`)                  |
+| `cd /home`    | `/home` directory                     |
+| `cd ~`        | User's home directory                 |
+| `cd`          | User's home directory                 |
+| `cd ..`       | Parent directory                      |
+| `cd ../..`    | Two levels up                         |
+| `cd -`        | Previous directory                    |
+
+## Notes
+- Use `pwd` to check your location.
+- Use `ls` to see directory contents.
+- You’ll get errors if the directory doesn’t exist or you lack permissions.
 
 ## Відповіді на контрольні запитання
 1. Як можна переглянути шлях до домашньої директорії користувача за допомогою команди `echo`? Наведіть обидва приклади у терміналі.  
@@ -205,3 +223,4 @@ Below is a table explaining the provided Linux commands related to filesystem na
     - The first command **moves** the file to the Desktop directory.  
     - The second command **renames** the file within the same directory.  
     - The third command **moves and renames** the file simultaneously.
+
