--- a/ЛР5.md
+++ b/ЛР5.md
@@ -224,3 +224,6 @@ Below is a table explaining the provided Linux commands related to filesystem na
     - The second command **renames** the file within the same directory.  
     - The third command **moves and renames** the file simultaneously.
 
+# Висновок
+
+Ця робота показала ефективне використання команд Linux-терміналу для навігації та керування файловою системою. Основні завдання включали визначення поточної директорії (pwd), переміщення між каталогами (cd) та перегляд вмісту з різними опціями ls (наприклад, -l для довгого формату, -a для прихованих файлів). Фільтрація файлів виконувалась за допомогою глобінгу (наприклад, ls I* для файлів, що починаються з літери, ls ?????? для назв із 6 символів). Було створено каталог групи (mkdir GroupA) та підкаталоги (mkdir surname1 surname2 surname3) з персоналізованими файлами (touch name1, echo > name1), що продемонструвало навички роботи з файлами. Копіювання (cp), переміщення (mv) та оновлення вмісту файлів (echo >) виконано успішно, забезпечивши відповідність вмісту файлів іменам студентів. Нарешті, рекурсивний перегляд із кольоровим форматуванням (ls -R --color GroupA) дав чітке уявлення про структуру каталогів, підтвердивши виконання всіх завдань.
