--- a/ЛР6.md
+++ b/ЛР6.md
@@ -1,1 +1,39 @@
+# Cловник базових англійських термінів (Видиборець Назар)
+
+1. **Compression** – Reducing file size using algorithms.
+2. **Archiving** – Combining files into a single archive.
+3. **Lossless Compression** – Compression that fully restores the original file.
+4. **Lossy Compression** – Compression with permanent data loss (e.g., MP3, JPEG).
+5. **gzip** – Fast compression tool using DEFLATE.
+   - `-r` – Compresses recursively.
+   - `-l` – Shows file stats.
+   - `-c` – Outputs to stdout.
+   - `-d` – Decompresses.
+   - `-1 to -9` – Compression level (1=fast, 9=thorough).
+6. **bzip2** – Better compression using Burrows-Wheeler, slower than gzip.
+   - `-s` – Low-memory mode.
+   - `-d` – Decompresses.
+   - `-1 to -9` – Block size (memory vs. compression).
+7. **xz** – Modern tool with LZMA2, best compression, high resource use.
+   - `-l` – Shows stats.
+   - `-c` – Outputs to stdout.
+   - `-d` – Decompresses.
+   - `-0 to -9` – Compression level.
+   - `-e` – Extreme compression mode.
+8. **tar** – Archiving tool, often paired with compression.
+   - `-c` – Creates archive.
+   - `-t` – Lists contents.
+   - `-x` – Extracts.
+   - `-v` – Verbose output.
+   - `-f` – Specifies file name.
+   - `-z` – Uses gzip.
+   - `-j` – Uses bzip2.
+   - `-J` – Uses xz.
+9. **Algorithm** – Method for compressing data.
+10. **Dictionary** – Set of substitutions for repeated data.
+11. **DEFLATE** – Algorithm used by gzip.
+12. **Burrows-Wheeler** – Algorithm used by bzip2.
+13. **LZMA2** – Algorithm used by xz.
+14. **File Extension** – Suffix indicating format (e.g., `.gz`, `.bz2`, `.xz`).
+15. **Recursive** – Processes all files in directories and subdirectories.
 
