--- a/ЛР6.md
+++ b/ЛР6.md
@@ -37,3 +37,75 @@
 14. **File Extension** – Suffix indicating format (e.g., `.gz`, `.bz2`, `.xz`).
 15. **Recursive** – Processes all files in directories and subdirectories.
 
+# Відповіді на питання
+
+# Linux Commands Overview
+
+## Compression and Archiving Commands
+
+1. **`tar`** – Creates/extracts archives.  
+   - `-c`: Create, `-x`: Extract, `-t`: List, `-v`: Verbose, `-f`: File, `-z`: gzip, `-j`: bzip2, `-J`: xz.  
+   - Install: `sudo apt install tar`
+
+2. **`xz`** – High compression with LZMA2.  
+   - `-d`: Decompress, `-c`: To stdout, `-l`: Stats, `-0 to -9`: Level, `-e`: Extreme.  
+   - Install: `sudo apt install xz-utils`
+
+3. **`zip`** – Cross-platform compression.  
+   - `-r`: Recursive, `-d`: Delete, `-u`: Update, `-9`: Max compression.  
+   - Install: `sudo apt install zip unzip`
+
+4. **`bzip2`** – Strong compression, slower than gzip.  
+   - `-d`: Decompress, `-s`: Low memory, `-1 to -9`: Block size.  
+   - Install: `sudo apt install bzip2`
+
+5. **`gzip`** – Fast compression with DEFLATE.  
+   - `-d`: Decompress, `-r`: Recursive, `-c`: To stdout, `-1 to -9`: Level.  
+   - Install: `sudo apt install gzip`
+
+### Examples
+1. `tar -czvf archive.tar.gz /path/dir` – Archive and gzip.  
+2. `xz -9 file.txt` – Compress `file.txt` to `file.txt.xz`.  
+3. `zip -r archive.zip /path/dir` – Zip a directory.
+
+---
+
+## File Viewing Commands
+
+1. **`cat`** – Displays/concatenates files.  
+   - `-n`: Number lines, `-b`: Number non-empty, `>`: Redirect.  
+   - Install: `sudo apt install coreutils`
+
+2. **`less`** – Paged file viewer with scrolling.  
+   - `-N`: Line numbers, `-S`: No wrap.  
+   - Install: `sudo apt install coreutils`
+
+3. **`more`** – Paged viewer (forward only).  
+   - `-d`: Prompts, `+n`: Start at line n.  
+   - Install: `sudo apt install coreutils`
+
+4. **`head`** – Shows first lines (default: 10).  
+   - `-n N`: N lines, `-c N`: N bytes.  
+   - Install: `sudo apt install coreutils`
+
+5. **`tail`** – Shows last lines (default: 10).  
+   - `-n N`: N lines, `-f`: Follow updates.  
+   - Install: `sudo apt install coreutils`
+
+---
+
+## Shell Pipes, Streams, and Filters
+
+- **Streams**: `stdin` (0), `stdout` (1), `stderr` (2).  
+- **Pipes (`|`)**: Send `stdout` to `stdin` (e.g., `ls | grep "txt"`).  
+- **Filters**: Process data (e.g., `grep`, `sort`).  
+- **Redirects**: `>` (overwrite), `>>` (append), `<` (input).  
+- Combines simple commands for complex tasks.
+
+---
+
+## `grep` Command
+
+- **Purpose**: Searches for patterns in files/input.  
+- **Examples**: `grep "error" log.txt`, `ls | grep "txt"`.  
+- **Options**: `-i` (case-insensitive), `-r` (recursive), `-n` (line numbers), `-v` (invert match).
