--- a/ЛР6.md
+++ b/ЛР6.md
@@ -109,3 +109,147 @@
 - **Purpose**: Searches for patterns in files/input.  
 - **Examples**: `grep "error" log.txt`, `ls | grep "txt"`.  
 - **Options**: `-i` (case-insensitive), `-r` (recursive), `-n` (line numbers), `-v` (invert match).
+
+
+# Хід роботи (Видиборець Назар)
+### Порівняльна характеристика процесів стискання та архівування
+
+**Стискання**:
+- **Мета**: Зменшити розмір файлу шляхом видалення надлишкових даних.
+- **Результат**: Один або кілька стиснених файлів.
+- **Приклади форматів**: `.zip`, `.gz`, `.bz2`, `.xz`.
+
+**Архівування**:
+- **Мета**: Об'єднати кілька файлів або каталогів у один файл для зручності зберігання та передачі.
+- **Результат**: Один архівний файл, який може містити стиснуті або нестиснуті дані.
+- **Приклади форматів**: `.tar`, `.zip`, `.7z`.
+
+### Програми для стискання та архівування в Linux
+
+| Програма | Формат | Опис |
+|----------|--------|------|
+| **gzip** | `.gz`  | Використовує алгоритм DEFLATE. Швидкий, але менш ефективний для дуже великих файлів. |
+| **bzip2** | `.bz2` | Використовує алгоритм Burrows-Wheeler. Краще стискання, ніж у gzip, але повільніший. |
+| **xz** | `.xz` | Використовує алгоритм LZMA. Найефективніший для стискання, але найповільніший. |
+| **zip** | `.zip` | Використовує алгоритм DEFLATE. Підтримує архівування та стискання. |
+| **7z** | `.7z` | Використовує різні алгоритми, включаючи LZMA. Високе стискання, але повільний. |
+
+### Порівняння алгоритмів стискання
+
+| Алгоритм    | Швидкість | Ефективність | Використання |
+|-------------|-----------|--------------|--------------|
+| **DEFLATE** | Висока    | Середня      | gzip, zip    |
+| **BZIP2**   | Середня   | Висока       | bzip2        |
+| **LZMA**    | Низька    | Дуже висока  | xz, 7z       |
+
+- **Найшвидший**: DEFLATE (використовується в gzip та zip).
+- **Найефективніший**: LZMA (використовується в xz та 7z).
+
+### Програмні засоби для стискання та архівування на мобільних телефонах
+
+| Програма       | Опис                                                                 | Переваги                                      |
+|----------------|----------------------------------------------------------------------|-----------------------------------------------|
+| **ZArchiver**  | Додаток для Android, який підтримує різні формати архівів.           | Простий у використанні, підтримує багато форматів. |
+| **RAR**        | Офіційний додаток для роботи з архівами `.rar` та `.zip` на Android. | Висока швидкість та ефективність.             |
+| **B1 Archiver**| Додаток для Android та iOS, який підтримує більшість популярних форматів архівів. | Безкоштовний, підтримує багато форматів.     |
+| **WinZip**     | Додаток для Android та iOS, який дозволяє стискати та розпаковувати файли. | Інтеграція з хмарними сервісами, зручний інтерфейс. |
+
+Ці програми забезпечують зручність роботи з архівами на мобільних пристроях, дозволяючи стискати та розпаковувати файли прямо на телефоні.
+
+### Перенаправлення потоків виведення в bash
+
+| Команда               | Що виконує команда?                                                                 |
+|-----------------------|------------------------------------------------------------------------------------|
+| `cmd 1> file`         | Перенаправляє стандартний вивід (stdout) команди `cmd` у файл `file`.               |
+| `cmd > file`          | Те саме, що й `cmd 1> file`. Перенаправляє стандартний вивід у файл `file`.          |
+| `cmd 2> file`         | Перенаправляє стандартний помилковий вивід (stderr) команди `cmd` у файл `file`.     |
+| `cmd >> file`         | Додає стандартний вивід команди `cmd` у кінець файлу `file`.                         |
+| `cmd &> file`         | Перенаправляє і стандартний вивід, і стандартний помилковий вивід у файл `file`.     |
+| `cmd > file 2>&1`     | Перенаправляє стандартний вивід у файл `file`, а потім перенаправляє stderr туди ж.  |
+| `cmd >> file 2>&1`    | Додає стандартний вивід у кінець файлу `file` і перенаправляє stderr туди ж.         |
+| `cmd 2>&1 > /dev/null`| Перенаправляє stderr туди ж, куди й stdout (який відкидається у `/dev/null`).        |
+| `cmd 2>/dev/null`     | Перенаправляє stderr у `/dev/null`, тобто відкидає помилки.                         |
+| `cmd1 | cmd2`         | Перенаправляє stdout команди `cmd1` на вхід команди `cmd2`.                         |
+| `cmd1 2>&1 | cmd2`    | Перенаправляє і stdout, і stderr команди `cmd1` на вхід команди `cmd2`.              |
+
+
+
+### Приклади команд та їх перенаправлення
+
+| Команда                                      | Що виконує команда?                                                                 | Який потік перенаправлення? |
+|----------------------------------------------|------------------------------------------------------------------------------------|-----------------------------|
+| `$ echo "It is a new story." > story`        | Записує рядок "It is a new story." у файл `story`.                                  | stdout                      |
+| `$ date > date.txt`                          | Записує поточну дату та час у файл `date.txt`.                                       | stdout                      |
+| `$ cat file1 file2 file3 > bigfile`          | Об'єднує вміст файлів `file1`, `file2`, і `file3` у файл `bigfile`.                 | stdout                      |
+| `$ ls -l >> directory`                       | Додає детальний список файлів у поточній директорії у кінець файлу `directory`.      | stdout                      |
+| `$ sort < file1_unsorted > file2_sorted`     | Сортує вміст файлу `file1_unsorted` і записує результат у файл `file2_sorted`.       | stdin та stdout             |
+| `$ find -name '* txt' > file.txt 2>/dev/null`| Шукає файли, що відповідають шаблону `* txt`, і записує результат у `file.txt`.      | stdout та stderr            |
+| `$ cat file1_unsorted | sort > file2_sorted` | Читає вміст файлу `file1_unsorted`, сортує його і записує результат у `file2_sorted`.| Конвеєр та stdout           |
+| `$ cat myfile | grep student | wc -l`       | Читає вміст файлу `myfile`, шукає рядки з "student" і підраховує їх кількість.       | Конвеєр                     |
+
+
+
+# Контрольні запитання (Видиборець Назар)
+
+
+1. **Надайте порівняльну характеристику процесам стискання та архівування.**
+
+   **Стискання**:
+   - **Мета**: Зменшити розмір файлу шляхом видалення надлишкових даних.
+   - **Результат**: Один або кілька стиснених файлів.
+   - **Приклади форматів**: `.zip`, `.gz`, `.bz2`, `.xz`.
+
+   **Архівування**:
+   - **Мета**: Об'єднати кілька файлів або каталогів у один файл для зручності зберігання та передачі.
+   - **Результат**: Один архівний файл, який може містити стиснуті або нестиснуті дані.
+   - **Приклади форматів**: `.tar`, `.zip`, `.7z`.
+
+2. **Які програми, окрім наведених в роботі, можуть використовуватись для стискання та архівування файлів та каталогів в ОС Linux? Наведіть приклади та їх короткий опис.**
+
+   | Програма | Формат | Опис |
+   |----------|--------|------|
+   | **gzip** | `.gz`  | Використовує алгоритм DEFLATE. Швидкий, але менш ефективний для дуже великих файлів. |
+   | **bzip2** | `.bz2` | Використовує алгоритм Burrows-Wheeler. Краще стискання, ніж у gzip, але повільніший. |
+   | **xz** | `.xz` | Використовує алгоритм LZMA. Найефективніший для стискання, але найповільніший. |
+   | **zip** | `.zip` | Використовує алгоритм DEFLATE. Підтримує архівування та стискання. |
+   | **7z** | `.7z` | Використовує різні алгоритми, включаючи LZMA. Високе стискання, але повільний. |
+
+3. **Порівняйте алгоритми стискання, що використовуються в командах (програмах), використовуваних в Linux. Які з алгоритмів можна вважати найшвидшим та найефективнішим?**
+
+   | Алгоритм    | Швидкість | Ефективність | Використання |
+   |-------------|-----------|--------------|--------------|
+   | **DEFLATE** | Висока    | Середня      | gzip, zip    |
+   | **BZIP2**   | Середня   | Висока       | bzip2        |
+   | **LZMA**    | Низька    | Дуже висока  | xz, 7z       |
+
+   - **Найшвидший**: DEFLATE (використовується в gzip та zip).
+   - **Найефективніший**: LZMA (використовується в xz та 7z).
+
+4. **Опишіть програмні засоби для стискання та архівування, що можуть бути використані у вашому мобільному телефоні.**
+
+   | Програма       | Опис                                                                 | Переваги                                      |
+   |----------------|----------------------------------------------------------------------|-----------------------------------------------|
+   | **ZArchiver**  | Додаток для Android, який підтримує різні формати архівів.           | Простий у використанні, підтримує багато форматів. |
+   | **RAR**        | Офіційний додаток для роботи з архівами `.rar` та `.zip` на Android. | Висока швидкість та ефективність.             |
+   | **B1 Archiver**| Додаток для Android та iOS, який підтримує більшість популярних форматів архівів. | Безкоштовний, підтримує багато форматів.     |
+   | **WinZip**     | Додаток для Android та iOS, який дозволяє стискати та розпаковувати файли. | Інтеграція з хмарними сервісами, зручний інтерфейс. |
+
+5. **Опишіть та порівняйте програмні засоби для стискання та (де)архівування даних у ОС сімейства Windows.**
+
+   | Програма | Опис | Переваги |
+   |----------|------|----------|
+   | **WinRAR** | Підтримує багато форматів архівів, включаючи `.rar`, `.zip`. | Висока швидкість, підтримка шифрування. |
+   | **7-Zip** | Відкрита програма, що підтримує багато форматів, включаючи `.7z`, `.zip`. | Висока ефективність стискання, безкоштовна. |
+   | **WinZip** | Підтримує `.zip` та інші формати, інтеграція з хмарними сервісами. | Зручний інтерфейс, підтримка хмарних сервісів. |
+
+6. **Поясніть яким чином стискання та архівування даних може бути використано для резервування даних. В яких ще задачах системного адміністрування воно може бути використано.**
+
+   - **Резервування даних**: Стискання та архівування дозволяють зменшити обсяг даних, що зберігаються, і об'єднати їх у один файл для зручності перенесення та зберігання.
+   - **Інші задачі**:
+     - Передача великих обсягів даних через мережу.
+     - Архівування лог-файлів для аналізу.
+     - Створення резервних копій конфігураційних файлів.
+
+7. **Яке призначення директорії файлу /dev/null?**
+
+   - **/dev/null**: Це спеціальний файл у Linux, який відкидає всі дані, записані в нього, і повертає EOF (кінець файлу) при читанні. Використовується для відкидання непотрібного виводу команд.
